recursion.logo.koch.Crab.scala.error
Erreur de compilation :
Crab:6: error: not enough arguments for method crab: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    crab(length/sqrt(2));
        ^Crab:8: error: not enough arguments for method crab: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    crab(length/sqrt(2));
        ^